--- a/css/styles.css
+++ b/css/styles.css
@@ -9,9 +9,28 @@
 
 .container {
     margin: 0 auto;
-    max-width: 1158px;
     padding-left: 15px;
     padding-right: 15px;
+}
+
+@media screen and (min-width:480px) {
+    .container {
+        width: 428px;
+    }
+}
+
+@media screen and (min-width:768px) {
+    .container {
+        width: 768px;
+    }
+}
+
+@media screen and (min-width:1200px) {
+    .container {
+        width: 1158px;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 }
 
 h1,
@@ -24,8 +43,15 @@ p {
 }
 
 .section {
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding-top: 96px;
+    padding-bottom: 96px;
+}
+
+@media screen and (min-width:1200px) {
+    .section {
+        padding-top: 120px;
+        padding-bottom: 120px;
+    }
 }
 
 img {
@@ -61,7 +87,6 @@ body {
     line-height: 1.33;
     letter-spacing: 0.03em;
     color:var(--title-text-color);
-    margin-right: 77px;
     text-transform: uppercase;
     padding-top: 24px;
     padding-bottom: 24px;
@@ -83,10 +108,23 @@ body {
 
 .header-nav {
     display: flex;
+    flex-direction: column;
+    gap: 40px;
+    display: none;
 }
 
-.header-nav .item:not(:last-child) {
-    margin-right: 40px;
+@media screen and (min-width:768px) {
+    .header-nav {
+        display: flex;
+        flex-direction: row;
+        margin-left: 120px;
+    }
+}
+
+@media screen and (min-width:1200px) {
+    .header-nav {
+        margin-left: 76px;
+    }
 }
 
 .header-nav-link {
@@ -130,9 +168,26 @@ body {
     list-style: none;
 }
 
+.link {
+    text-decoration: none;
+}
+
 .contacts {
-    display: flex;
-    margin-left: auto;
+    display: none;
+}
+
+@media screen and (min-width:768px) {
+    .contacts {
+        display: block;
+        margin-left: auto;
+    }
+}
+
+@media screen and (min-width:1200px) {
+    .contacts {
+        display: flex;
+        margin-left: auto;
+    }
 }
 
 .contacts-link {
@@ -145,8 +200,21 @@ body {
     transition-property: color;
     transition-duration: var(--tr-duration);
     transition-timing-function: var(--tr-tm-func);
-    padding-top: 24px;
-    padding-bottom: 24px;
+}
+
+@media screen and (min-width:768px) and (max-width:1199.98px) {
+    .contacts-link {
+        font-size: 12px;
+        line-height: calc(16/12);
+        letter-spacing: 0.04em;
+    }
+}
+
+@media screen and (min-width:1200px) {
+    .contacts-link {
+        padding-top: 24px;
+        padding-bottom: 24px;
+    }
 }
 
 .contacts-link:hover,
@@ -154,37 +222,113 @@ body {
     color: var(--accent-color);
 }
 
-.contacts .item:not(:last-child) {
-    margin-right: 40px;
+@media screen and (min-width:1200px) {
+    .contacts .item:not(:last-child) {
+        margin-right: 40px;
+    }
+}
+
+.icon-menu {
+    width: 24px;
+    height: 24px;
 }
 
 /* HERO */
 
 .hero {
-    padding-top: 192px;
-    padding-bottom: 192px;
     text-align: center;
-}
-
-.overlay {
     background-color: #2E2F42;
     max-width: 1440px;
-    height: 600px;
+    max-height: 600px;
     margin-left: auto;
     margin-right: auto;
-    background-image: linear-gradient(rgba(46,47,66,0.7), rgba(46,47,66,0.7)), url(../images/people-office.jpg);
+    background-image: linear-gradient(rgba(46,47,66,0.7), rgba(46,47,66,0.7)),url(../images/hero/bg-img/hero-bg-mobile.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
 }
 
+@media (min-device-pixel-ratio: 2),(-webkit-min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx) {
+    .hero {
+        background-image: linear-gradient(rgba(46,47,66,0.7), rgba(46,47,66,0.7)),url(../images/hero/bg-img/hero-bg-mobile@2x.jpg);
+    }
+}
+
+@media screen and (min-width:768px) {
+    .hero {
+        background-image: linear-gradient(rgba(46,47,66,0.7), rgba(46,47,66,0.7)),url(../images/hero/bg-img/hero-bg-tablet.jpg);
+    }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 768px),screen and (min-resolution: 192dpi) and (min-width: 768px),screen and (min-resolution: 2dppx) and (min-width: 768px) {
+    .hero {
+        background-image: linear-gradient(rgba(46,47,66,0.7), rgba(46,47,66,0.7)),url(../images/hero/bg-img/hero-bg-tablet@2x.jpg);
+    }
+}
+
+@media screen and (min-width:1200px) {
+    .hero {
+        background-image: linear-gradient(rgba(46,47,66,0.7), rgba(46,47,66,0.7)),url(../images/hero/bg-img/hero-bg-desktop.jpg);
+    }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 1200px),screen and (min-resolution: 192dpi) and (min-width: 1200px),screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+    .hero {
+        background-image: linear-gradient(rgba(46,47,66,0.7), rgba(46,47,66,0.7)),url(../images/hero/bg-img/hero-bg-desktop@2x.jpg);
+    }
+}
+
+@media screen and (min-width:480px) {
+    .hero {
+        padding-top: 112px;
+        padding-bottom: 112px;
+    }
+}
+
+@media screen and (min-width:768px) {
+    .hero {
+        padding-top: 112px;
+        padding-bottom: 108px;
+    }
+}
+
+@media screen and (min-width:1200px) {
+    .hero {
+        padding-top: 188px;
+        padding-bottom: 188px;
+    }
+}
+
 .hero-title {
-    font-weight: 600;
-    font-size: 56px;
-    line-height: 1.07;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
     text-align: center;
     color: #FFFFFF;
+    margin-bottom: 72px;
 }
+
+@media screen and (min-width:768px) {
+    .hero-title {
+        font-weight: 600;
+        font-size: 56px;
+        line-height: 1.07;
+        color: #FFFFFF;
+        margin-bottom: 40px;
+    }
+}
+
+
+@media screen and (min-width:1200px) {
+    .hero-title {
+        font-weight: 600;
+        font-size: 56px;
+        line-height: 1.07;
+        color: #FFFFFF;
+        margin-bottom: 48px;
+    }
+}
+
 
 .hero-button {
     font-family: inherit;
@@ -199,7 +343,6 @@ body {
     text-align: center;
     border-radius: 4px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    margin-top: 48px;
     border: 1px solid transparent;
     transition-property: background-color, box-shadow;
     transition-duration: var(--tr-duration);
@@ -224,48 +367,105 @@ body {
 /* ABOUT */
 
 .about-main {
-    display: flex;
-}
-
-.about-main li:not(:last-child) {
-    margin-right: 24px;
+    display: inline-block;
 }
 
 .about-main .item {
-    width: calc(100% / 3 - 28px);
+    width: 100%;
+    margin-bottom: 72px;
+}
+
+.about-main .item:last-child {
+    margin-bottom: 0;
+}
+
+@media screen and (min-width:768px) {
+    .about-main {
+        display: flex;
+        flex-wrap: wrap;
+        row-gap: 72px;
+        column-gap: 24px;
+    }
+}
+
+@media screen and (min-width:768px) {
+    .about-main .item {
+        width: 356px;
+        margin-bottom: 0;
+    }
+}
+
+@media screen and (min-width:1200px) {
+    .about-main .item {
+        width: 264px;
+    }
 }
 
 .about-title {
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 1.2;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: calc(40/36);
     color: var(--title-text-color);
-    margin-top: 8px;
+    text-align: center;
+    margin-bottom: 8px;
+}
+
+@media screen and (min-width:1200px) {
+
+    .about-title {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: calc(24/20);
+    }
 }
 
 .about-text {
-    margin-top: 8px;
     font-size: 16px;
     line-height: 1.5;
 }
 
+@media screen and (max-width:1199.98px) {
+    .about-text {
+        font-weight: 500;
+    }
+}
+
 .about-icon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    margin-bottom: 8px;
+    padding: 24px 100px;
     height: 112px;
     background-color: #F4F4FD;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 4px;
 }
 
 .about-icon-svg {
+    display: block;
     width: 64px;
     height: 64px;
 }
 
+@media screen and (max-width:1199.98px) {
+    .about-icon {
+        display: none;
+    }
+}
+
+
 /* WORK */
 
 .work {
-    padding-bottom: 120px;
+    display: none;
+}
+
+
+@media screen and (min-width:1200px) {
+    .work {
+        display: block;
+        padding-bottom: 120px;
+    }
 }
 
 .work-photo {
@@ -290,11 +490,63 @@ body {
 
 .team {
     background-color: #F4F4FD;
+    padding-bottom: 128px;
 }
+
+@media screen and (min-width:768px) {
+    .team {
+        padding-bottom: 104px;
+    }
+}
+
+@media screen and (min-width:1200px) {
+    .team {
+        padding-bottom: 120px;
+    }
+}
+
+@media screen and (min-width:768px) {
+    .team .container {
+        padding-left: 108px;
+        padding-right: 108px;
+    }
+}
+
+@media screen and (min-width:1200px) {
+    .team .container {
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+
+
 
 .team-main {
     display: flex;
-    margin-top: 72px;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 72px;
+    margin: 0;
+    padding: 0;
+}
+
+@media screen and (min-width:768px) {
+    .team-main {
+        column-gap: 24px;
+        row-gap: 64px;
+    }
+}
+
+
+@media screen and (min-width:1200px) {
+    .team-main {
+        gap: 24px;
+    }
+}
+
+.team-main .item {
+    width: 264px;
+    margin: auto;
 }
 
 .team-main-title {
@@ -304,6 +556,7 @@ body {
     text-align: center;
     text-transform: capitalize;
     color: var(--title-text-color);
+    margin-bottom: 72px;
 }
 
 .team-title {
@@ -319,15 +572,11 @@ body {
     text-align: center;
 }
 
-.team-main .item:not(:last-child) {
-    margin-right: 24px;
-}
-
 .team-main .item {
     align-items: center;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-border-radius: 0px 0px 4px 4px;
-background-color: #FFFFFF;
+    border-radius: 0px 0px 4px 4px;
+    background-color: #FFFFFF;
 }
 
 .padding {
@@ -368,22 +617,56 @@ background-color: #FFFFFF;
     background-color: var(--accent-color);
 }
 
+@media screen and (min-width: 768px) {
+    .clients .container {
+      padding-left: 108px;
+      padding-right: 108px;
+    }
+  }
+  
+  @media screen and (min-width: 1200px) {
+    .clients .container {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
+
 .clients-title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
     color: var(--title-text-color);
+    margin-bottom: 72px;
 }
+
+
 
 .clients-link {
     display: flex;
-    margin-top: 72px;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    row-gap: 72px;
+    column-gap: 16px;
 }
 
-.clients-link-main {
-    width: calc(100% - 120px / 6);
-}
+@media screen and (min-width: 768px) {
+    .clients-link {
+        gap: 24px;
+    }
+  }
+  
+  .clients-link-main {
+    width: 190px;
+    height: 88px;
+  }
+  
+  @media screen and (min-width: 768px) {
+    .clients-link-main {
+        width: 168px;
+        height: 88px;
+    }
+  }
 
 .clients-link-bg {
     display: flex;
@@ -402,12 +685,14 @@ background-color: #FFFFFF;
 
 .clients-icon {
     padding: 0;
-    width: 104px;
+    width: 110px;
     height: 56px;
 }
 
-.clients-link li:not(:last-child) {
-    margin-right: 24px;
+@media screen and (min-width: 768px) {
+    .clients-icon{
+        width: 104px;
+    }
 }
 
 .clients-link-bg:hover,.clients-link-bg:focus {
@@ -419,8 +704,36 @@ background-color: #FFFFFF;
 
 .footer {
     background-color: var(--background-color);
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 96px;
+    padding-bottom: 96px;
+}
+
+@media screen and (min-width:1200px) {
+    .footer {
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
+}
+
+.footer .container {
+    display: flex;
+    flex-direction: column;
+}
+
+@media screen and (min-width: 768px) {
+    .footer .container{
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 565px;
+    }
+}
+
+@media screen and (min-width:1200px) {
+    .footer .container {
+        align-items: baseline;
+        flex-wrap: nowrap;
+        width: 1200px;
+    }
 }
 
 .logo-footer {
@@ -433,35 +746,91 @@ background-color: #FFFFFF;
     text-transform: uppercase;
 }
 
+.footer-first {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+}
+
+@media screen and (min-width: 768px) {
+    .footer-first{
+       padding: 0;
+     align-items: flex-start;
+    } 
+ }
+
+ @media screen and (min-width:1200px){
+    .footer-first{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 0;
+        margin: 0;
+    }
+ }
+
 .footer-text {
     font-size: 16px;
     line-height: 1.5;
     color: #E7E9FC;
     margin-top: 16px;
+    margin-bottom: 72px;
     width: 264px;
 }
 
-.footer-possittion {
-    display: flex;
-    align-items: baseline;
+@media screen and (min-width: 768px) {
+    .footer-text {
+    margin-bottom: 0px;   
+    } 
+}
+
+@media screen and (min-width:1200px){
+    .footer-text{
+       margin: 0;   
+    }
 }
 
 .social {
-    margin-left: 120px;
-    margin-right: 80px;
+    display: flex;
+    flex-direction: column;
+}
+
+@media screen and (min-width: 768px) {
+    .social {
+       margin-left: 24px;
+       margin-bottom: 0;
+       align-items: flex-start;  
+    } 
+}
+    @media screen and (min-width:1200px){
+    .social {
+       margin-left: 120px;
+       align-items: flex-start;
+    }   
 }
 
 .social-title {
-    font-weight: 600;
+    display: flex;
+    justify-content: center;
+    font-weight: 500;
     Font-size: 16px;
     Line-height: 1.5;
     color: #FFFFFF;
+    margin-bottom: 16px;
+}
+
+@media screen and (min-width:1200px){
+    .social{
+        font-weight: 600;
+    }
 }
 
 .social-link {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
     padding: 0;
-    margin-top: 16px;
     margin-bottom: 0;
 }
 
@@ -847,13 +1216,43 @@ background-color: #FFFFFF;
     letter-spacing: 0.04em;
 }
 
+.subscribe {
+    margin: 0;
+    padding: 0;
+}
+
+@media screen and (min-width: 768px) {
+    .subscribe { 
+       margin-top:72px;  
+    } 
+}
+
+@media screen and (min-width:1200px){
+    .subscribe {
+       margin-top: 0;
+       margin-left: 80px
+    } 
+}  
+
 .subscribe-flex {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+    .subscribe-flex {
+       flex-direction: row;
+       align-items: flex-start;
+    } 
 }
 
 .subscribe-label {
-    display: block;
+    display: flex;
+    justify-content: center;
+    margin: 0;
     margin-bottom: 16px;
+    margin-top: 72px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -861,8 +1260,15 @@ background-color: #FFFFFF;
     color: #FFFFFF;
 }
 
+@media screen and (min-width: 768px) {
+    .subscribe-label {
+        justify-content: flex-start;
+        margin-top: 0px;   
+    } 
+}
+
 .subscribe-input {
-    width: 264px;
+    width: 396px;
     height: 40px;
     padding: 8px 16px;
     background-color: transparent;
@@ -872,9 +1278,16 @@ background-color: #FFFFFF;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
-    margin-right: 24px;
+    margin-bottom: 16px;
     color: rgba(255, 255, 255, 0.6);
     outline: transparent;
+}
+
+@media screen and (min-width: 768px) {
+    .subscribe-input{
+        width: 264px;
+        margin-right: 24px;  
+    } 
 }
 
 .subscribe-input:focus {
@@ -908,7 +1321,6 @@ background-color: #FFFFFF;
 }
 
 .subscribe-icon {
-    margin-left:16px;
     width: 24px;
     height: 24px;
     fill: #FFFFFF;
@@ -918,4 +1330,124 @@ background-color: #FFFFFF;
 .subscribe-button:focus {
     background-color: #404BBF;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.menu {
+    display: flex;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+  }
+  
+  @media (max-width: 767px) {
+    .menu {
+      display: none;
+    }
+  }
+  
+  .menu-toggle {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    min-height: 40px;
+    min-width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    border-radius: 50%;
+    outline: none;
+  }
+  
+  .menu-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+    padding: 40px;
+    padding-top: 80px;
+    background-color: #FFFFFF;
+    z-index: 999;
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
+  }
+  
+  .menu-container.is-open {
+    transform: translateX(0);
+  }
+  
+  .mobile-menu {
+    margin-bottom: auto;
+  }
+  
+  .mobile-menu .link {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 40px;
+    letter-spacing: 0.02em;
+    color: var(--title-text-color);
+    display: block;
+    text-decoration: none;
+  }
+
+  .mobile-menu-item:not(:last-child) {
+    margin-bottom: 40px;
+  }
+
+  .mobile-contacts-item:not(:last-child) {
+    margin-bottom: 40px;
+  }
+
+  .mobile-contacts {
+    margin-bottom: 48px;
+  }
+
+  .mobile-contacts-link {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    color: var(--primary-text-color);
+  }
+
+  .mobile-contacts-link.accent {
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 40px;
+    color: var(--accent-color);
+  }
+
+  .mobile-social-link {
+    display: flex;
+    align-items: center;
+    gap: 56px;
+  }
+
+  .mobile-social-link-bg {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: var(--accent-color);
+  }
+
+  .mobile-social-icon {
+    width: 24px;
+    height: 24px;
+    fill: #F4F4FD;
+  }
+
+  @media screen and (min-width:768px) {
+    .menu-toggle {
+        display: none;
+    }
 }
