--- a/css/styles.css
+++ b/css/styles.css
@@ -865,17 +865,41 @@ body {
 /* PORTFOLIO */
 
 .portfolio {
-    padding-top: 96px;
-    padding-bottom: 120px;
+    padding-top: 48px;
+    padding-bottom: 48px;
 }
 
-.portfolio-nav {
+@media screen and (min-width:768px) {
+    .portfolio {
+        padding-top: 96px;
+        padding-bottom: 120px;
+    }
+}
+
+.portfolio-nav  {
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: left;
+    column-gap: 24px;
+    row-gap: 16px;
+    padding-bottom: 48px;
+    padding-right: 109px;
+}
+.portfolio-nav .item:not(:last-child) {
+    margin-right: 0;
 }
 
-.portfolio-nav .item:not(:last-child) {
-    margin-right: 24px;
+@media screen and (min-width:768px) {
+.portfolio-nav {
+        display: flex;
+        justify-content: center;
+        padding-bottom: 0;
+        padding-right:0;
+    }
+
+    .portfolio-nav .item:not(:last-child) {
+        margin-right: 24px;
+    }
 }
 
 .portfolio-button {
@@ -887,13 +911,19 @@ body {
     background-color: #F4F4FD;
     letter-spacing: 0.04em;
     cursor: pointer;
-    padding: 12px 24px;
+    padding: 8px 16px;
     text-align: center;
     border-radius: 4px;
     border: 1px solid #E7E9FC;
     transition-property: color, background-color;
     transition-duration: var(--tr-duration);
     transition-timing-function: var(--tr-tm-func);
+}
+
+@media screen and (min-width:768px) {
+    .portfolio-button {
+        padding: 12px 24px;
+    }
 }
 
 .portfolio-button:focus,
@@ -921,12 +951,14 @@ body {
     margin-top: 8px;
 }
 
-.portfolio-main {
-    margin-right: -24px;
-    margin-bottom: -48px;
-    display: flex;
-    margin-top: 72px;
-    flex-wrap: wrap;
+@media screen and (min-width:768px) {
+    .portfolio-main {
+        margin-right: -24px;
+        margin-bottom: -48px;
+        display: flex;
+        margin-top: 72px;
+        flex-wrap: wrap;
+    }
 }
 
 .portfolio-main .item {
@@ -935,18 +967,27 @@ body {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
-.portfolio-main .item {
-    margin-right: 24px;
-    margin-bottom: 48px;
-    width: calc(100% / 3 - 24px);
+@media screen and (min-width:768px) {
+    .portfolio-main .item {
+        margin-right: 24px;
+        margin-bottom: 48px;
+        width: calc(100% / 3 - 24px);
+    }
 }
 
 .padding-portfolio {
-    padding-top: 32px;
-    padding-bottom: 32px;
-    padding-left: 16px;
-    padding-right: 16px;
+        padding-top: 32px;
+        padding-bottom: 32px;
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+
+@media screen and (max-width:767.98px) {
+    .portfolio-main .item:not(:last-child) {
+        margin-bottom: 48px;
+ }
 }
+
 
 .portfolio-link {
     transition-property: border-color, box-shadow;
