--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,14 @@ body {
     padding-bottom: 24px;
 }
 
+@media screen and (max-width:767.98px) {
+    .main-head  {
+        display: flex;
+        margin: 0;
+        align-items: left;
+    }
+}
+
 .logo-blue {
     color: var(--accent-color);
 }
@@ -149,7 +157,6 @@ body {
 
 .header-nav-link.current {
     color: var(--accent-color);
-
 }
 
 .header-nav-link.current::after {
@@ -408,6 +415,12 @@ body {
     color: var(--title-text-color);
     text-align: center;
     margin-bottom: 8px;
+}
+
+@media screen and (min-width:768px) {
+    .about-title {
+        text-align: left;
+    }
 }
 
 @media screen and (min-width:1200px) {
@@ -869,6 +882,13 @@ body {
     padding-bottom: 48px;
 }
 
+@media screen and  (max-width:767.98px) {
+    .portfolio-main img {
+        width: 396px;
+        height: 280px;
+    }
+}
+
 @media screen and (min-width:768px) {
     .portfolio {
         padding-top: 96px;
@@ -885,9 +905,6 @@ body {
     padding-bottom: 48px;
     padding-right: 109px;
 }
-.portfolio-nav .item:not(:last-child) {
-    margin-right: 0;
-}
 
 @media screen and (min-width:768px) {
 .portfolio-nav {
@@ -895,10 +912,6 @@ body {
         justify-content: center;
         padding-bottom: 0;
         padding-right:0;
-    }
-
-    .portfolio-nav .item:not(:last-child) {
-        margin-right: 24px;
     }
 }
 
@@ -951,6 +964,7 @@ body {
     margin-top: 8px;
 }
 
+
 @media screen and (min-width:768px) {
     .portfolio-main {
         margin-right: -24px;
@@ -968,6 +982,14 @@ body {
 }
 
 @media screen and (min-width:768px) {
+    .portfolio-main .item {
+        margin-right: 24px;
+        margin-bottom: 48px;
+        width: calc(100% / 2 - 24px);
+    }
+}
+
+@media screen and (min-width:1200px) {
     .portfolio-main .item {
         margin-right: 24px;
         margin-bottom: 48px;
@@ -1062,7 +1084,7 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    min-width: 408px;
+    width: 408px;
     min-height: 584px;
     background-color: #FCFCFC;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.14), 0 1px 3px rgba(0, 0, 0, 0.12), 0 2px 1px rgba(0, 0, 0, 0.2);
@@ -1070,6 +1092,13 @@ body {
     transform: translate(-50%, -50%);
     transition: transform var(--tr-duration) var(--tr-tm-func);
     padding-top: 48px;
+}
+
+@media screen and (max-width: 427.98px) {
+    .modal {
+       width: 95%;
+    }
+    
 }
 
 .button-modal {
@@ -1309,7 +1338,7 @@ body {
 }
 
 .subscribe-input {
-    width: 396px;
+    width: 100%;
     height: 40px;
     padding: 8px 16px;
     background-color: transparent;
@@ -1365,6 +1394,7 @@ body {
     width: 24px;
     height: 24px;
     fill: #FFFFFF;
+    margin-left: 16px;
 }
 
 .subscribe-button:hover,
@@ -1438,6 +1468,10 @@ body {
     text-decoration: none;
   }
 
+    .mobile-menu-link.current {
+        color: var(--accent-color);
+  }
+
   .mobile-menu-item:not(:last-child) {
     margin-bottom: 40px;
   }
@@ -1469,6 +1503,12 @@ body {
     display: flex;
     align-items: center;
     gap: 56px;
+  }
+
+  @media screen and (max-width:367.98px) {
+    .mobile-social-link {
+        gap: 20px;
+    }
   }
 
   .mobile-social-link-bg {
